--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
   "dependencies": {
+    "@types/node": "^14.14.34",
     "amazon-cognito-identity-js": "^4.5.12",
-    "aws-amplify": "^3.3.22",
+    "aws-amplify": "^3.3.24",
     "aws-sdk": "^2.858.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "name": "amplify-node",
+  "version": "1.0.0",
+  "main": "aws.ts",
+  "devDependencies": {
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
