--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "main": "aws.ts",
   "devDependencies": {
     "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "typescript": "^4.3.4"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
